Fixed jumping issue

--- a/src/css/Sidebar.css
+++ b/src/css/Sidebar.css
@@ -6,6 +6,7 @@
   position: fixed;
   z-index: 100;
   width: 200px;
+  overflow: hidden;
 }
 
 .sidebar:hover {
